--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -24,5 +24,6 @@
     <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
     <p>{{ form.submit() }}</p>
 </form>
+<p>New User? <a href="{{ url_for('register') }}">Register</a></p>
 
 {% endblock %}
